@@ -5,21 +5,17 @@ import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.time.LocalDate;
 import java.util.Collection;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.HashSet;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
 public class FilmService {
     private final FilmStorage filmStorage;
-    private final UserStorage userStorage;
 
     private static final LocalDate CINEMA_BIRTHDAY = LocalDate.of(1895, 12, 28);
 
@@ -29,19 +25,16 @@ public class FilmService {
     }
 
     public Film update(Film film) {
-        validateFilm(film);
-        Film existing = filmStorage.getById(film.getId());
-        if (existing == null) {
+        if (film.getId() == null || filmStorage.getById(film.getId()) == null) {
             throw new NotFoundException("Фильм " + film.getId() + " не найден");
         }
+        validateFilm(film);
         return filmStorage.update(film);
     }
 
     public Film getById(long id) {
         Film film = filmStorage.getById(id);
-        if (film == null) {
-            throw new NotFoundException("Фильм " + id + " не найден");
-        }
+        if (film == null) throw new NotFoundException("Фильм " + id + " не найден");
         return film;
     }
 
@@ -51,8 +44,7 @@ public class FilmService {
 
     public void addLike(long filmId, long userId) {
         Film film = getById(filmId);
-        User user = userStorage.getById(userId);
-        if (user == null) {
+        if (userId <= 0) {
             throw new NotFoundException("Пользователь " + userId + " не найден");
         }
         film.getLikes().add(userId);
@@ -61,24 +53,29 @@ public class FilmService {
 
     public void removeLike(long filmId, long userId) {
         Film film = getById(filmId);
-        User user = userStorage.getById(userId);
-        if (user == null) {
+        if (userId <= 0) {
             throw new NotFoundException("Пользователь " + userId + " не найден");
         }
         film.getLikes().remove(userId);
         filmStorage.update(film);
     }
 
-    public List<Film> getPopular(int count) {
+    public Collection<Film> getPopular(int count) {
         return filmStorage.getAll().stream()
-                .sorted(Comparator.comparingInt((Film f) -> f.getLikes().size()).reversed())
+                .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void validateFilm(Film film) {
+        if (film.getName() == null || film.getName().isBlank()) {
+            throw new ValidationException("Название не может быть пустым");
+        }
         if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(CINEMA_BIRTHDAY)) {
-            throw new ValidationException("Дата релиза не может быть раньше 28 декабря 1895 года");
+            throw new ValidationException("Дата релиза не может быть раньше 28.12.1895");
+        }
+        if (film.getLikes() == null) {
+            film.setLikes(new HashSet<>()); // защита от NPE
         }
     }
 }
